Index page image on mobile fixed

--- a/assets/css/standard.css
+++ b/assets/css/standard.css
@@ -128,7 +128,7 @@ a:hover {
 
 @media screen and (max-width: 480px) {
     .banner-img {
-    	background-image: url('../img/banner-mobile.svg');
+    	background-image: url('../img/banner-mobile.png');
     }
     .logo {
 		display: none;
